discussion/kv_engine/155349/155349_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add PCH Object Library

Add an object library containing a pre-compiled header that includes
headers commonly used throughout the codebase. This commit is a
proof of concept that use pre-compiled headers in various targets
throughout the code base.

Before:

Analyzing build trace from 'noOptimize.bin'...
**** Time summary:
Compilation (1065 times):
  Parsing (frontend):         3093.3 s
  Codegen & opts (backend):    832.9 s

After:

  Analyzing build trace from 'initial.bin'...
**** Time summary:
Compilation (1073 times):
  Parsing (frontend):         2847.3 s
  Codegen & opts (backend):    826.4 s

Change-Id: I182fa5d0058849e02ff8d473e8477aa51d5d999f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-10 10:51:34.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 11:27:39.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9718/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9718/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9718/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8313/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36681/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/252/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31351/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10365/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11292/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19296/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11441/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11712/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 13:02:22.000000000
Message: 
Patch Set 9: Verified+1

Overriding clang-tidy which cannot deal with precompiled-headers.h
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 13:02:24.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
